# src/router/event.route.js
@@ -16,17 +16,17 @@ router.post(
   authguard(["USER", "ADMIN"]),
   eventController.joinEvent
 );
-router.get(
-  "/eventListUser/:id",
-  authguard(["ADMIN"]),
-  eventController.getUserEvents
-);
-router.put(
-  "/cancelEvent",
-  authguard(["USER", "ADMIN"]),
-  validate(eventSchema),
-  eventController.cancelEvent
-);
+// router.get(
+//   "/eventListUser/:id",
+//   authguard(["ADMIN"]),
+//   eventController.getUserEvents
+// );
+// router.put(
+//   "/cancelEvent",
+//   authguard(["USER", "ADMIN"]),
+//   validate(eventSchema),
+//   eventController.cancelEvent
+// );
 router.get("/getAllUser", authguard(["ADMIN"]), eventController.getAllUser);
 
 module.exports = router;
